--- a/views/doctor-index.ejs
+++ b/views/doctor-index.ejs
@@ -129,6 +129,9 @@
                     </li>
                 <% }) %>
             </ul>
+            <ul>
+                <a href="/doctor/blogs/conditions">Conditions</a>
+            </ul>
             <button onclick="window.location.href='/doctor/blogs'">View All Blogs</button>
         </div>
 
