--- a/views/editDoctorProfile.ejs
+++ b/views/editDoctorProfile.ejs
@@ -11,7 +11,7 @@
       z-index: 1;
       left: 0;
       top: 0;
-      width: 100%;
+      width: 100%;z
       height: 100%;
       overflow: auto;
       background-color: rgb(0,0,0);
@@ -319,39 +319,6 @@ function closeMapModal() {
   document.getElementById('mapModal').style.display = 'none';
 }
 
-function addFAQ() {
-    const container = document.getElementById('faq-container');
-    const index = container.children.length;
-
-    const div = document.createElement('div');
-    div.className = 'input-group';
-
-    const questionInput = document.createElement('input');
-    questionInput.type = 'text';
-    questionInput.name = `faqs[${index}][question]`;
-    questionInput.className = 'form-control';
-    questionInput.placeholder = 'FAQ Question';
-    div.appendChild(questionInput);
-
-    const answerInput = document.createElement('input');
-    answerInput.type = 'text';
-    answerInput.name = `faqs[${index}][answer]`;
-    answerInput.className = 'form-control';
-    answerInput.placeholder = 'FAQ Answer';
-    div.appendChild(answerInput);
-
-    const removeButton = document.createElement('button');
-    removeButton.type = 'button';
-    removeButton.className = 'btn btn-danger';
-    removeButton.textContent = 'Remove';
-    removeButton.addEventListener('click', function() {
-      div.remove();
-    });
-    div.appendChild(removeButton);
-
-    container.appendChild(div);
-  }
-
   </script>
   <script src="https://maps.googleapis.com/maps/api/js?key=<%= process.env.GOOGLE_MAPS_API_KEY %>&libraries=places&callback=initMap" async defer></script></head>
 
@@ -387,10 +354,6 @@ function addFAQ() {
       <input type="text" name="city" value="<%= doctor.city %>" required>
     </div>
     <div>
-      <label>Zipcode:</label>
-      <input type="text" name="zip" value="<%= doctor.zip %>" required>
-    </div>
-    <div>
       <label>Availability:</label>
       <select name="availability">
         <option value="true" <%= doctor.availability === 'true' ? 'selected' : '' %>>Available</option>
@@ -406,6 +369,10 @@ function addFAQ() {
     <div>
       <label>Date of Birth:</label>
       <input type="date" name="dateOfBirth" value="<%= doctor.dateOfBirth ? doctor.dateOfBirth.toISOString().split('T')[0] : '' %>" required>
+    </div>
+    <div>
+      <label for="experience">Years of Experience:</label>
+      <input type="number" id="experience" name="experience" min="0" value="<%= doctor.experience %>" required>
     </div>
     <div>
       <label>Blood Group:</label>
@@ -581,16 +548,15 @@ function addFAQ() {
     
     <div>
       <label>FAQs:</label>
-      <div id="faq-container">
+      <div id="faqs-container">
         <% doctor.faqs.forEach((faq, index) => { %>
           <div class="input-group">
-            <input type="text" name="faqs[<%= index %>][question]" value="<%= faq.question %>" class="form-control" placeholder="FAQ Question">
-            <input type="text" name="faqs[<%= index %>][answer]" value="<%= faq.answer %>" class="form-control" placeholder="FAQ Answer">
+            <input type="text" name="faqs[<%= index %>]" value="<%= faq %>" class="form-control">
             <button type="button" class="btn btn-danger" onclick="this.parentElement.remove()">Remove</button>
           </div>
         <% }) %>
       </div>
-      <button type="button" onclick="addFAQ()">Add FAQ</button>
+      <button type="button" onclick="addInput('faqs')">Add FAQ</button>
     </div>
 
     <div>
