--- a/views/patient-index.ejs
+++ b/views/patient-index.ejs
@@ -149,6 +149,7 @@
                 <button type="submit">Search</button>
             </form>
         </div>
+        <a href="/patient/blogs/conditions">Condition</a>
 
         <div class="blogs-container">
             <h2> Blogs</h2>
